--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -113,6 +113,8 @@ body::after {
 
 .main-content {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Header & Footer Transparency */
